[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["useful"]

[project]
name = "useful-utils"
version = "0.0.1"
authors = [{ name = "Christian Lund", email = "contact@example.com" }]
description = "Useful utilities, only standard library dependencies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/lundchristian/useful_utils"
